    compatibility issue). (Patch: scott dot moynes+php at gmail dot com)

- Improved OpenSSL extension: (Pierre)
  . Added support for all supported algorithms in openssl_verify
  . Added openssl_pkey_get_details, returns the details of a key
  . Added x509 v3 extensions support
  . Added a new constant OPENSSL_KEYTYPE_EC

- Fixed overflow on 64bit systems in str_repeat() and wordwrap(). (Stefan E.)
- Disabled CURLOPT_FOLLOWLOCATION in curl when open_basedir or safe_mode are
  enabled. (Stefan E., Ilia)
- Fixed XSLTProcessor::importStylesheet() to return TRUE on success (Christian)
- Fixed leaks in openssl_csr_sign and openssl_csr_new (Pierre)
- Fixed phpinfo() cutoff of variables at \0. (Ilia)
- Fixed a bug in the filter extension that prevented magic_quotes_gpc from
  being applied when RAW filter is used. (Ilia)
- Fixed bug #38467 (--enable-versioning causes make fail on OS X). (Tony)
- Fixed bug #38461 (setting private attribute with __set() produces 
  segfault). (Tony)
- Fixed bug #38451 (PDO_MYSQL doesn't compile on Solaris). (Tony)
- Fixed bug #38450 (constructor is not called for classes used in userspace 
  stream wrappers). (Tony)
- Fixed bug #38438 (DOMNodeList->item(0) segfault on empty NodeList). (Ilia)
- Fixed bug #38431 (xmlrpc_get_type() crashes PHP on objects). (Tony)
- Fixed bug #38424 (Different attribute assignment if new or existing). (Rob)
- Fixed bug #38394 (PDO fails to recover from failed prepared statement
  execution). (Ilia)
- Fixed bug #38377 (session_destroy() gives warning after
  session_regenerate_id()). (Ilia)
- Fixed bug #38354 (Unwanted reformatting of XML when using AsXML). (Christian)
- Fixed bug #38347 (Segmentation fault when using foreach with an unknown/empty 
  SimpleXMLElement). (Tony)
- Fixed bug #38322 (reading past array in sscanf() leads to arbitrary code 
  execution). (Tony)
- Fixed bug #38303 (spl_autoload_register() supress all errors silently).
  (Ilia)