@@ -29,6 +29,7 @@ PHP                                                                        NEWS
   . Added openssl_pkey_get_details, returns the details of a key
   . Added x509 v3 extensions support
   . Added a new constant OPENSSL_KEYTYPE_EC
+  . Added openssl_csr_get_subject() and openssl_csr_get_public_key()
 
 - Fixed overflow on 64bit systems in str_repeat() and wordwrap(). (Stefan E.)
 - Disabled CURLOPT_FOLLOWLOCATION in curl when open_basedir or safe_mode are
